SSO-205 added get user by phone and id implementation
